--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -159,7 +159,9 @@
                 
                     <input type="submit" value="Contact Now" class="btn">
                 </form>
-                
+                <div class="spinner-container" id="spinner">
+                    <div class="spinner"></div>
+                </div>
         </div>
     </section>
     <!-- contact section end -->
